--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+/* tất cả các thứ liên quan tới theme sẽ tách riêng ra 1 file *.scss */
+
+/* custom theme backgroud color = transparent*/
+// @import 'theme-custom.scss';
+
+/* prebuild theme sẽ kèm theo Background color */
+@import "theme.scss";
+
+//=================================================================
+//cách 3: change dialog backgournd color
+// Browser Debug F12: sẽ thấy Tag <mat-dialog-container>  => change CSS của nó
+// !important: là mức ưu tiên cao nhất cho CSS
+// mat-dialog-container {
+//   background-color: greenyellow !important;
+// }
+
+//==================================================================
+// cách 4:
+// !important: là mức ưu tiên cao nhất cho CSS
+// mat-dialog-container {
+//   background-color: transparent !important;
+//   padding: 0px 0px 0px 0px !important;
+//   overflow: hidden !important; //loai bỏ scrollbar
+// }
