--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   <a [routerLink]="['icon']" routerLinkActive="active">icon</a>
   <a [routerLink]="['material-icon']" routerLinkActive="active">material-icon</a>
   <a [routerLink]="['material-button-icon']" routerLinkActive="active">material-button-icon</a>
+  <a [routerLink]="['bootstrap-icon']" routerLinkActive="active">bootstrap-icon</a>
 </nav>
 
 <div class="app-router-outlet-layout">
