--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   <a [routerLink]="['material-icon']" routerLinkActive="active">material-icon</a>
   <a [routerLink]="['material-button-icon']" routerLinkActive="active">material-button-icon</a>
   <a [routerLink]="['bootstrap-icon']" routerLinkActive="active">bootstrap-icon</a>
+  <a [routerLink]="['font-awesome-icon']" routerLinkActive="active">font-awesome-icon</a>
 </nav>
 
 <div class="app-router-outlet-layout">
