--- a/src/app/font-awesome-icon/font-awesome-icon.component.html
+++ b/src/app/font-awesome-icon/font-awesome-icon.component.html
@@ -1,9 +1,13 @@
 <h2>font-awesome-icon.component: (nên dùng)</h2>
 
 <p>
+  + fontAwesome 5: phải đăng ký mới đc vì CORS ở server
+  <br />
   + font-awesome rất đa dạng, nhiều hơn hẳn Bootstrap
   <br />
   + vào link dưới và vào từng đề mục và search icon name sẽ ra
+  <br />
+  +
 </p>
 <a href="https://www.w3schools.com/icons/fontawesome5_intro.asp"
   >https://www.w3schools.com/icons/fontawesome5_intro.asp</a
