--- a/src/app/icon/icon.component.html
+++ b/src/app/icon/icon.component.html
@@ -38,3 +38,36 @@
     <span>folder</span>
   </button>
 </div>
+
+<p>lỗi vertical center:</p>
+<div>
+  <button class="item">
+    <i class="material-icons" style="color: blueviolet"> chevron_right </i>
+    <i class="material-icons" style="color: blueviolet"> folder </i>
+    <span>folder</span>
+  </button>
+</div>
+
+<p>Center vertical với outer/inner CSS:</p>
+<div>
+  <button class="item outer-vertical-center">
+    <i class="material-icons" style="color: blueviolet"> chevron_right </i>
+    <i class="material-icons" style="color: blueviolet"> folder </i>
+    <span>folder</span>
+  </button>
+</div>
+
+<div
+  style="height: 100px; width: 100%; background-color: greenyellow"
+  class="outer-vertical-center"
+>
+  <div style="height: 40px; width: 40px; background-color: blue" class="inner-vertical-center">
+    abc
+  </div>
+  <div style="height: 20px; width: 20px; background-color: yellow" class="inner-vertical-center">
+    kkk
+  </div>
+  <div style="height: 60px; width: 60px; background-color: aqua" class="inner-vertical-center">
+    kkk
+  </div>
+</div>
