--- a/src/app/icon/icon.component.html
+++ b/src/app/icon/icon.component.html
@@ -61,13 +61,7 @@
   style="height: 100px; width: 100%; background-color: greenyellow"
   class="outer-vertical-center"
 >
-  <div style="height: 40px; width: 40px; background-color: blue" class="inner-vertical-center">
-    abc
-  </div>
-  <div style="height: 20px; width: 20px; background-color: yellow" class="inner-vertical-center">
-    kkk
-  </div>
-  <div style="height: 60px; width: 60px; background-color: aqua" class="inner-vertical-center">
-    kkk
-  </div>
+  <div style="height: 40px; width: 40px; background-color: blue">abc</div>
+  <div style="height: 20px; width: 20px; background-color: yellow">kkk</div>
+  <div style="height: 60px; width: 60px; background-color: aqua">kkk</div>
 </div>
