--- a/src/app/material-button-icon/material-button-icon.component.html
+++ b/src/app/material-button-icon/material-button-icon.component.html
@@ -1,9 +1,12 @@
 <h2>material-button-icon.component:</h2>
 <p>
   + material icon cần phải đi cùng Material button
-  <br>
-  + bắt buộc phải instal Angular Material 
+  <br />
+  + bắt buộc phải instal Angular Material
 </p>
+<a href="https://material.angular.io/components/button/overview"
+  >https://material.angular.io/components/button/overview</a
+>
 <div>
   <section>
     <div class="example-label">Icon</div>
