--- a/src/app/material-icon/material-icon.component.html
+++ b/src/app/material-icon/material-icon.component.html
@@ -4,6 +4,9 @@
   <br />
   + dùng icon css tối ưu hơn => dễ tùy biến các kiểu hơn.
 </p>
+<a href="https://material.angular.io/components/icon/overview"
+  >https://material.angular.io/components/icon/overview</a
+>
 <div>
   <mat-icon>folder</mat-icon>
 
