--- a/src/app/icon/icon.component.html
+++ b/src/app/icon/icon.component.html
@@ -39,7 +39,7 @@
   </button>
 </div>
 
-<p>lỗi vertical center:</p>
+<p style="color: blue">lỗi vertical center:</p>
 <div>
   <button class="item">
     <i class="material-icons" style="color: blueviolet"> chevron_right </i>
@@ -48,7 +48,7 @@
   </button>
 </div>
 
-<p>Center vertical với outer/inner CSS:</p>
+<p style="color: blue">Center vertical với outer/inner CSS:</p>
 <div>
   <button class="item outer-vertical-center">
     <i class="material-icons" style="color: blueviolet"> chevron_right </i>
@@ -57,6 +57,11 @@
   </button>
 </div>
 
+<p style="color: blue">
+  +Nếu gặp vấn đề chỉ cần đưa về div, thêm div vào là có thể giải quyết đc hết:
+  <br />
+  + flex có thể giảm CSS size nên tận dụng.
+</p>
 <div
   style="height: 100px; width: 100%; background-color: greenyellow"
   class="outer-vertical-center"
